# kafka

./: .gitignore  README.md  certificates.md  consumer.py  kafka-connect.md  kafka.md  ksqldb.md  producer.py  pyproject.toml  schema-registry.md
cli/: README.md  cli.py
cli/commands/: broker.py  ksqldb.py  rest.py  rest_proxy.py
cp-commercially/: docker-compose.yml
cp-community/: README.md  cli.py  docker-compose.yaml  docker-compose.yml  streams.md
cp-community/commands/: broker.py
ksqldb/: docker-compose.yml  streams.md
rest-proxy-example/: docker-compose.yml
rest-proxy-example/src/: details.html  index.html  new.html
